@@ -30,7 +30,7 @@ build()
 	cd "${srcdir}/${_gitname}"
 	mkdir -p build
 	cd build
-	cmake ../ -DCMAKE_INSTALL_PREFIX:PATH=/usr
+	cmake ../ -DCMAKE_INSTALL_PREFIX:PATH=/usr -Wno-dev
 	CORE_COUNT="$(nproc)"
 	make -j"${CORE_COUNT}"
 }
