@@ -4,6 +4,7 @@ SphereSim 2.5.0:
 * Improved Viewer windows: removed version from title and fixing size.
 * Added comparison of adaptive and static stepsize to Tester.
 * Added QMake build files.
+* Improved build scripts and added OpenMP flag to Server.pro.
 
 SphereSim 2.4.4:
 * Added Array class and modified TwoDimArray to use the new class. No speed change.
